# pyfibaro

./: LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml  python-package.yml  python-publish.yml
examples/: __init__.py  example_device.py  example_info.py  example_login.py  example_room.py  example_scene.py  example_state_handler.py
pyfibaro/: __init__.py  fibaro_client.py  fibaro_connection.py  fibaro_data_helper.py  fibaro_device.py  fibaro_device_manager.py  fibaro_info.py  fibaro_login.py  fibaro_room.py  fibaro_scene.py  fibaro_state_handler.py  fibaro_state_multiplexer.py  fibaro_state_resolver.py
pyfibaro/common/: __init__.py  const.py  rest_client.py
pyfibaro/controller/: fibaro_state_multiplexer.py
script/: distribute  setup  test
tests/: __init__.py  test_fibaro_client.py  test_fibaro_connection.py  test_fibaro_data_helper.py  test_fibaro_device.py  test_fibaro_device_armed.py  test_fibaro_device_hc3.py  test_fibaro_device_manager.py  test_fibaro_device_scene_support.py  test_fibaro_device_scene_support_hc3.py  test_fibaro_info.py  test_fibaro_login.py  test_fibaro_refresh.py  test_fibaro_room.py  test_fibaro_scene.py  test_fibaro_scene_hc3.py  test_fibaro_state_multiplexer.py  test_fibaro_state_resolver.py  test_rest_client.py  test_utils.py
tests/fixture/: device-armed.json  device-hc3.json  device-netatmo-plugin.json  device-scene-support-hc3.json  device-scene-support.json  device.json  info.json  login_fail.json  login_success.json  room.json  (+4 more)
