[metadata]
name = pyfibaro
version = 0.8.0
description = Simple API to access fibaro home center from any Python 3 script. Designed for Home Assistant (but not only)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rappenze/pyfibaro
author = Roman Appenzeller
author_email =
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Home Automation

[options]
packages =
    pyfibaro
    pyfibaro.common
install_requires =
    requests~=2.28
python_requires = >=3.9
include_package_data = True
package_dir =
    =.

[tool:pytest]
testpaths =
    tests
